--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,36 @@
   --cornflower: #e7e9fc;
 }
 
+/* Null margin and padding */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+/* CONTAINER */
+
+.container {
+  width: 100%;
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
 body {
   font-family: var(--main-font);
   color: var(--slate);
@@ -29,10 +59,37 @@ body {
 
 .list {
   list-style: none;
+  gap: 40px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /**------------HEADER-------------- */
 
+header {
+  padding-top: 26px;
+  padding-bottom: 26px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+}
 /* logo */
 
 .logo {
@@ -43,6 +100,7 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
 }
 
 .black-accent-color {
@@ -50,6 +108,12 @@ body {
 }
 
 /* navigation */
+
+.navigation {
+  display: flex;
+  flex-grow: 1;
+}
+
 .menu-item {
   color: var(--navyblue);
   font-size: 16px;
@@ -78,6 +142,8 @@ body {
 /* --------ORDER SERVICE-------*/
 .order-section {
   background: var(--navyblue);
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .order-service-title {
@@ -87,6 +153,10 @@ body {
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
+  max-width: 496px;
+  width: 100%;
+  margin: 0 auto;
+  margin-bottom: 48px;
 }
 
 /* order service button */
@@ -95,6 +165,12 @@ body {
   font-weight: 500;
   background: var(--iris);
   cursor: pointer;
+  border-radius: 4px;
+  border: 0;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding: 16px 32px;
+  display: block;
+  margin: 0 auto;
 }
 
 button {
@@ -111,6 +187,21 @@ button {
 }
 
 /* --------- 2nd section, Text blocks---------*/
+
+.text-container {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.text-items {
+  display: flex;
+  gap: 24px;
+}
+
+.item-list {
+  width: calc((100% - 24px * 3) / 4);
+}
+
 .title-section {
   color: var(--navyblue);
   font-size: 36px;
@@ -127,6 +218,7 @@ button {
   color: var(--navyblue);
   line-height: 1.2;
   letter-spacing: 0.02em;
+  padding-bottom: 8px;
 }
 
 .item-description {
@@ -137,16 +229,63 @@ button {
 
 /* ----- 3rd section, Text with images------*/
 
+.img-container {
+  padding-bottom: 120px;
+}
+
+.title-section {
+  margin-bottom: 72px;
+}
+
+.img-list {
+  display: flex;
+  gap: 24px;
+}
+
+.img-item {
+  width: calc((100% - 24px * 2) / 3);
+}
 /* --------- 4th section, Our Team -------- */
+
+.team-container {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .our-team-section {
   background-color: var(--cloud);
 }
 
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+
 .team-item {
   background: var(--white, #fff);
+  width: calc((100% - 24px * 3) / 4);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.team-img {
+  margin-bottom: 32px;
+}
+
+.team-text {
+  text-align: center;
+  margin-bottom: 32px;
+  gap: 8px;
 }
 
 /* --------------- Footer -------------- */
+
+.footer-container {
+  padding-top: 102px;
+  padding-bottom: 100px;
+}
 .white-accent-color {
   color: var(--cloud);
 }
@@ -155,8 +294,15 @@ button {
   background-color: var(--navyblue);
 }
 
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 18px;
+}
+
 .footer-description {
   color: var(--cloud);
+  max-width: 264px;
+  width: 100%;
 }
 
 /* --------------- PORTFOLIO -------------- */
