--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,12 @@ header {
   align-items: center;
 }
 
+.line {
+  border-bottom: 1px solid var(--cornflower, #e7e9fc);
+  background: var(--white, #fff);
+  padding-bottom: 24px;
+}
+
 .header-nav {
   display: flex;
 }
@@ -101,6 +107,7 @@ header {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-right: 76px;
+  text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .black-accent-color {
@@ -306,16 +313,31 @@ button {
 }
 
 /* --------------- PORTFOLIO -------------- */
+.portfolio-nav-section {
+  padding-top: 96px;
+  padding-bottom: 72px;
+}
+
+.portfolio-navigation {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
 .portfolio-nav {
   /* background */
   background: var(--cloud);
-  border: none;
+  border: 1px solid var(--cornflower, #e7e9fc);
+  border-radius: 4px;
+  padding: 12px 24px;
   /* text */
   color: var(--iris);
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  display: block;
+  margin: 0 auto;
 }
 
 .portfolio-nav:hover,
@@ -329,5 +351,30 @@ button {
   letter-spacing: 0.04em;
 }
 
+.portfolio-section {
+  padding-bottom: 120px;
+}
+
+.portfolio-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  row-gap: 48px;
+}
+
 .portfolio-card {
+  width: calc((100% - 24px * 2) / 3);
+  border: 1px solid var(--cornflower, #e7e9fc);
+  background: var(--white, #fff);
+}
+
+.portfolio-card-text {
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-bottom: 32px;
+}
+
+.portfolio-card img {
+  margin-bottom: 32px;
+  max-width: 100%;
 }
