--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,9 @@ ol {
   padding-left: 0;
 }
 
+img {
+  display: block;
+}
 /* CONTAINER */
 
 .container {
@@ -119,6 +122,7 @@ header {
 .navigation {
   display: flex;
   flex-grow: 1;
+  align-items: center;
 }
 
 .menu-item {
@@ -128,6 +132,8 @@ header {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 /* adress */
@@ -178,6 +184,7 @@ header {
   padding: 16px 32px;
   display: block;
   margin: 0 auto;
+  min-width: 169px;
 }
 
 button {
@@ -195,7 +202,7 @@ button {
 
 /* --------- 2nd section, Text blocks---------*/
 
-.text-container {
+.text-block-section {
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -225,7 +232,7 @@ button {
   color: var(--navyblue);
   line-height: 1.2;
   letter-spacing: 0.02em;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .item-description {
@@ -254,13 +261,10 @@ button {
 }
 /* --------- 4th section, Our Team -------- */
 
-.team-container {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-
 .our-team-section {
   background-color: var(--cloud);
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .team-list {
@@ -277,33 +281,31 @@ button {
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-.team-img {
-  margin-bottom: 32px;
-}
-
 .team-text {
   text-align: center;
-  margin-bottom: 32px;
+  padding: 32px 16px 32px;
   gap: 8px;
+}
+
+.team-text h3 {
+  margin-bottom: 8px;
 }
 
 /* --------------- Footer -------------- */
 
-.footer-container {
-  padding-top: 102px;
-  padding-bottom: 100px;
-}
 .white-accent-color {
   color: var(--cloud);
 }
 
 .footer {
   background-color: var(--navyblue);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .footer-logo {
   display: inline-block;
-  margin-bottom: 18px;
+  margin-bottom: 16px;
 }
 
 .footer-description {
