--- a/css/styles.css
+++ b/css/styles.css
@@ -324,6 +324,7 @@ button {
   display: flex;
   gap: 24px;
   justify-content: center;
+  margin-bottom: 72px;
 }
 
 .portfolio-nav {
@@ -351,6 +352,7 @@ button {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  border: 1px solid transparent;
 }
 
 .portfolio-section {
