--- a/css/styles.css
+++ b/css/styles.css
@@ -367,18 +367,17 @@ button {
 }
 
 .portfolio-card {
-  width: calc((100% - 24px * 2) / 3);
-  border: 1px solid var(--cornflower, #e7e9fc);
+  width: calc((100% - 48px) / 3);
+
   background: var(--white, #fff);
 }
 
 .portfolio-card-text {
-  padding-left: 16px;
-  padding-right: 16px;
-  margin-bottom: 32px;
+  padding: 32px 16px;
+  border: 1px solid var(--cornflower, #e7e9fc);
+  border-top: none;
 }
 
 .portfolio-card img {
-  margin-bottom: 32px;
   max-width: 100%;
 }
