--- a/css/styles.css
+++ b/css/styles.css
@@ -81,8 +81,6 @@ body {
 /**------------HEADER-------------- */
 
 header {
-  padding-top: 26px;
-  padding-bottom: 26px;
 }
 
 .header-container {
@@ -93,7 +91,6 @@ header {
 .line {
   border-bottom: 1px solid var(--cornflower, #e7e9fc);
   background: var(--white, #fff);
-  padding-bottom: 24px;
 }
 
 .header-nav {
@@ -109,8 +106,12 @@ header {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.logo-top {
   margin-right: 76px;
-  text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .black-accent-color {
@@ -134,6 +135,7 @@ header {
   letter-spacing: 0.02em;
   padding-top: 24px;
   padding-bottom: 24px;
+  display: flex;
 }
 
 /* adress */
@@ -143,6 +145,8 @@ header {
 
 .adress-item {
   color: var(--slate);
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .menu-item:hover,
@@ -353,10 +357,6 @@ button {
   line-height: 1.5;
   letter-spacing: 0.04em;
   border: 1px solid transparent;
-}
-
-.portfolio-section {
-  padding-bottom: 120px;
 }
 
 .portfolio-wrap {
